manifests/templates/reconciler-manager.yaml
# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: reconciler-manager
  namespace: config-management-system
  labels:
    app: reconciler-manager
    configmanagement.gke.io/system: "true"
    configmanagement.gke.io/arch: "csmr"
spec:
  minReadySeconds: 10
  selector:
    matchLabels:
      app: reconciler-manager
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: reconciler-manager
        configsync.gke.io/deployment-name: reconciler-manager
    spec:
      serviceAccountName: reconciler-manager
      containers:
      - command:
        - /reconciler-manager
        args:
        - --enable-leader-election
        - "-v=1"
        image: RECONCILER_MANAGER_IMAGE_NAME
        name: reconciler-manager
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            - ALL
        resources:
          requests:
            cpu: 10m
            memory: 50Mi
        volumeMounts:
        - name: configs
          mountPath: /deployment.yaml
          subPath: deployment.yaml
      - name: otel-agent
        image: OTELCONTRIBCOL_IMAGE_NAME
        command:
        - /otelcontribcol
        args:
        - "--config=/conf/otel-agent-config.yaml"
        # The prometheus transformer appends `_ratio` to gauge metrics: https://github.com/open-telemetry/opentelemetry-collector-contrib/blob/v0.86.0/pkg/translator/prometheus/normalize_name.go#L149
        # Add the feature gate to enable metric suffix trimming.
        - "--feature-gates=-pkg.translator.prometheus.NormalizeName"
        resources:
          limits:
            cpu: 1
            memory: 1Gi
          requests:
            cpu: 10m
            memory: 100Mi
        ports:
        - containerPort: 55678 # Default OpenCensus receiver port.
        - containerPort: 8888  # Metrics.
        - containerPort: 13133 # Health check
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            - ALL
        volumeMounts:
        - name: otel-agent-config-vol
          mountPath: /conf
        startupProbe:
          httpGet:
            path: /
            port: 13133
          failureThreshold: 30   # Allow up to 5 minutes (30 * 10s)
          periodSeconds: 10
          initialDelaySeconds: 0
        readinessProbe:
          httpGet:
            path: /
            port: 13133 # Health Check extension default port.
        # These KUBE env vars help populate OTEL_RESOURCE_ATTRIBUTES which
        # is used by the otel-agent to populate resource attributes when
        # emiting metrics to the otel-collector. This is more efficient than
        # having the otel-collector look them up from the apiserver.
      terminationGracePeriodSeconds: 10
      volumes:
      - name: configs
        configMap:
          name: reconciler-manager-cm
      - name: otel-agent-config-vol
        configMap:
          name: otel-agent
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
