manifests/templates/resourcegroup-manifest.yaml
# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Namespace
metadata:
  labels:
    configmanagement.gke.io/arch: "csmr"
    configmanagement.gke.io/system: "true"
    control-plane: controller-manager
  name: resource-group-system
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    configmanagement.gke.io/arch: "csmr"
    configmanagement.gke.io/system: "true"
    control-plane: controller-manager
  name: resource-group-controller-manager
  namespace: resource-group-system
spec:
  replicas: 1
  selector:
    matchLabels:
      configmanagement.gke.io/arch: "csmr"
      configsync.gke.io/deployment-name: resource-group-controller-manager
      control-plane: controller-manager
  template:
    metadata:
      labels:
        configmanagement.gke.io/arch: "csmr"
        configsync.gke.io/deployment-name: resource-group-controller-manager
        control-plane: controller-manager
    spec:
      containers:
      - args:
        - --metrics-addr=127.0.0.1:8080
        - --enable-leader-election
        command:
        - /resource-group
        image: RESOURCE_GROUP_CONTROLLER_IMAGE_NAME
        name: manager
        resources:
          requests:
            cpu: 100m
            memory: 200Mi
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            - ALL
      - args:
        - --config=/conf/otel-agent-config.yaml
        - --feature-gates=-pkg.translator.prometheus.NormalizeName
        command:
        - /otelcontribcol
        image: OTELCONTRIBCOL_IMAGE_NAME
        name: otel-agent
        ports:
        - containerPort: 55678
        - containerPort: 8888
        - containerPort: 13133
        resources:
          requests:
            cpu: 10m
            memory: 100Mi
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            - ALL
        volumeMounts:
        - mountPath: /conf
          name: otel-agent-config-vol
      serviceAccountName: resource-group-sa
      terminationGracePeriodSeconds: 10
      volumes:
      - configMap:
          name: resource-group-otel-agent
        name: otel-agent-config-vol
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
