manifests/templates/git-importer.yaml
# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# TODO: Use one git-importer deployment instead of three.
apiVersion: v1
kind: Service
metadata:
  name: git-importer
  namespace: config-management-system
  labels:
    monitored: "true"
    configmanagement.gke.io/system: "true"
    configmanagement.gke.io/arch: "legacy"
spec:
  selector:
    app: git-importer
  ports:
    - name: metrics
      port: 8675
      targetPort: metrics-port
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: git-importer
  namespace: config-management-system
  labels:
    app: git-importer
    configmanagement.gke.io/system: "true"
    configmanagement.gke.io/arch: "legacy"
spec:
  minReadySeconds: 10
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: git-importer
  template:
    metadata:
      labels:
        app: git-importer
    spec:
      serviceAccountName: importer
      containers:
      - name: importer
        image: IMAGE_NAME
        command: ["git-importer"]
        args:
        - "--v=0"
        - "--git-dir=/repo/root/rev"
        ports:
          - containerPort: 8675
            name: metrics-port
        volumeMounts:
          - name: repo
            mountPath: /repo
            readOnly: true
        resources:
          requests:
            cpu: "150m"
            memory: "100Mi"
      - name: fs-watcher
        image: IMAGE_NAME
        command: ["git-importer"]
        args:
        - "--v=0"
        - "--watch-directory=/repo"
        volumeMounts:
          - name: repo
            mountPath: /repo
            readOnly: true
        resources:
          requests:
            cpu: "150m"
            memory: "100Mi"
      - name: git-sync
        image: gcr.io/config-management-release/git-sync:v3.6.1-gke.1__linux_amd64
        # Do not put "rev-" in the root arg or you will break our parsing of commit hashes. See
        # pkg/policyimporter/git/git.go to see where we depend on that magic string from git-sync.
        args: ["--root=/repo/root", "--dest=rev", "--max-sync-failures=30", "--error-file=error.json", "--v=5"]
        volumeMounts:
        - name: repo
          mountPath: /repo
        - name: git-creds
          mountPath: /etc/git-secret
          readOnly: true
        securityContext:
          runAsUser: 65533 # this is a non-root user declared by git-sync
        resources:
          requests:
            cpu: "150m"
            memory: "200Mi"
      volumes:
      - name: repo
      - name: git-creds
        secret:
          secretName: git-creds
          defaultMode: 288 # 0440; we need group read so that fsGroup below gives access
      securityContext:
        fsGroup: 65533 # to make SSH key readable
