manifests/templates/monitor.yaml
# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: monitor
  namespace: config-management-system
  labels:
    monitored: "true"
    configmanagement.gke.io/system: "true"
    configmanagement.gke.io/arch: "legacy"
spec:
  selector:
    app: monitor
  ports:
  - name: metrics
    port: 8675
    targetPort: metrics-port
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitor
  namespace: config-management-system
  labels:
    app: monitor
    configmanagement.gke.io/system: "true"
    configmanagement.gke.io/arch: "legacy"
spec:
  minReadySeconds: 1
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: monitor
  template:
    metadata:
      labels:
        app: monitor
    spec:
      serviceAccountName: monitor
      containers:
      - name: monitor
        image: IMAGE_NAME
        command: ["monitor"]
        args:
        - "--v=0"
        ports:
        - containerPort: 8675
          name: metrics-port
