manifests/templates/otel-collector.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
  namespace: config-management-monitoring
  labels:
    monitored: "true"
    configmanagement.gke.io/system: "true"
    configmanagement.gke.io/arch: "csmr"
spec:
  selector:
    app: opentelemetry
    component: otel-collector
  ports:
  - name: opencensus # Default endpoint for OpenCensus receiver.
    port: 55678
    protocol: TCP
    targetPort: 55678
  - name: metrics-default # Default endpoint for querying metrics.
    port: 8888
  - name: metrics # Prometheus exporter metrics.
    port: 8675
  - name: health-check
    port: 13133
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otel-collector
  namespace: config-management-monitoring
  labels:
    app: opentelemetry
    component: otel-collector
    configmanagement.gke.io/system: "true"
    configmanagement.gke.io/arch: "csmr"
spec:
  selector:
    matchLabels:
      app: opentelemetry
      component: otel-collector
  minReadySeconds: 5
  progressDeadlineSeconds: 120
  replicas: 1
  template:
    metadata:
      labels:
        app: opentelemetry
        component: otel-collector
    spec:
      containers:
      - name: otel-collector
        image: OTELCONTRIBCOL_IMAGE_NAME
        command:
        - /otelcontribcol
        args:
        - "--config=/conf/otel-collector-config.yaml"
        # The prometheus transformer appends `_ratio` to gauge metrics: https://github.com/open-telemetry/opentelemetry-collector-contrib/blob/v0.86.0/pkg/translator/prometheus/normalize_name.go#L149
        # Add the feature gate to enable metric suffix trimming.
        - "--feature-gates=-pkg.translator.prometheus.NormalizeName"
        resources:
          limits:
            cpu: 1
            memory: 2Gi
          requests:
            cpu: 200m
            memory: 400Mi
        ports:
        - containerPort: 55678 # Default endpoint for OpenCensus receiver.
        - containerPort: 8888  # Default endpoint for querying metrics.
        - containerPort: 8675  # Prometheus exporter metrics.
        - containerPort: 13133 # Health check
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            - ALL
        volumeMounts:
        - name: otel-collector-config-vol
          mountPath: /conf
      volumes:
      - name: otel-collector-config-vol
        projected:
          sources:
          - configMap:
              name: otel-collector
          - configMap:
              name: otel-collector-googlecloud
              optional: true
          - configMap:
              name: otel-collector-custom
              optional: true
      securityContext:
        fsGroup: 2000
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
